--- a/dciproject/my_project/requirements.txt
+++ b/dciproject/my_project/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.6.0
 backports.zoneinfo==0.2.1
+bleach==6.0.0
 Django==4.2.1
+django-html-sanitizer==0.1.5
 djangorestframework==3.14.0
 pytz==2023.3
+six==1.16.0
 sqlparse==0.4.4
+webencodings==0.5.1
